--- a/news app/pubspec.yaml
+++ b/news app/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   floor: ^1.5.0
 
   #makes api request:
-  retrofit: ^3.0.1
+  retrofit: ^4.4.1
 
   #Hooks
   flutter_hooks: ^0.20.5
@@ -42,9 +42,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  retrofit_generator: 3.0.1+1
-  floor_generator: 1.2.0
-  build_runner: 2.1.2
+  retrofit_generator: ^9.1.2
+  floor_generator: ^1.5.0
+  build_runner: ^2.4.12
+  build: ^2.2.0
 
 
 flutter:
